10/15@02:05pm: re-structured code prior to tackling ncurses, shrank the size of main.c as a result
10/15@03:40pm: can print and monster movement is intact, pc isn't moving yet
10/15@09:08pm: added player movement at full functionality, many cores were dumped during creation of this change
10/15@10:34pm: added most input commands
